--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT=8080;
-MONGO_URI=mongodb://localhost:27017/car_rental;
-JWT_SECRET=my_jwt_secret;
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/car_rental
+JWT_SECRET=my_jwt_secret
